@@ -192,7 +192,7 @@ static const OPTION optionsTable[] = {
   {0,   OPTION_WERROR, NULL, "Treat the warnings as errors"},
   {0,   OPTION_DEBUG, NULL, "Enable debugging symbol output"},
   {0,   "--cyclomatic", &options.cyclomatic, "Display complexity of compiled functions"},
-  {0,   OPTION_STD, NULL, "Determine the language standard (c89, c99, c11, c23, sdcc89 etc.)"},
+  {0,   OPTION_STD, NULL, "Determine the language standard (c90, c99, c11, c23, sdcc89 etc.)"},
   {0,   OPTION_DOLLARS_IN_IDENT, &options.dollars_in_ident, "Permit '$' as an identifier character"},
   {0,   OPTION_SIGNED_CHAR, &options.signed_char, "Make \"char\" signed by default"},
   {0,   OPTION_USE_NON_FREE, &options.use_non_free, "Search / include non-free licensed libraries and header files"},
@@ -1261,7 +1261,7 @@ parseCmdLine (int argc, char **argv)
             {
               char *langVer = getStringArgEx (OPTION_CODE_SEG, charsConsumed, argv, &i, argc);
 
-              if (strcmp (langVer, "c89") == 0 || strcmp (langVer, "c90") == 0 || strcmp (langVer, "iso9899:1990") == 0)
+              if (strcmp (langVer, "c90") == 0 || strcmp (langVer, "iso9899:1990") == 0 || strcmp (langVer, "c89") == 0)
                 {
                   options.std_c95 = 0;
                   options.std_c99 = 0;
@@ -1271,7 +1271,7 @@ parseCmdLine (int argc, char **argv)
                   continue;
                 }
 
-              if (strcmp (langVer, "c95") == 0 || strcmp (langVer, "iso9899:199409") == 0)
+              if (strcmp (langVer, "c94") == 0 || strcmp (langVer, "iso9899:199409") == 0 || strcmp (langVer, "c95") == 0)
                 {
                   options.std_c95 = 1;
                   options.std_c99 = 0;
@@ -1312,7 +1312,7 @@ parseCmdLine (int argc, char **argv)
                   continue;
                 }
 
-              if (strcmp (langVer, "sdcc89") == 0 || strcmp (langVer, "sdcc90") == 0)
+              if (strcmp (langVer, "sdcc90" || strcmp (langVer, "sdcc89") == 0) == 0)
                 {
                   options.std_c95 = 0;
                   options.std_c99 = 0;
